# GrowthOS

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: IMPLEMENTATION_TODO.md  PRODUCT_ROADMAP.md  TARGET_ARCHITECTURE.md
src/growth_os/: __init__.py  config.py  server.py
src/growth_os/api/: server.py
src/growth_os/app/: __init__.py  lifespan.py  registry.py  server.py
src/growth_os/config/: __init__.py  feature_flags.py  profiles.py  settings.py
src/growth_os/connectors/: __init__.py  amplitude.py  base.py  csv.py  duckdb.py  ga4.py  google_ads.py  hubspot.py  meta_ads.py  mixpanel.py  postgres.py  stripe.py  webhook.py
src/growth_os/core/: __init__.py  connector.py  formatters.py  metrics.py  schema.py
src/growth_os/data/: __init__.py  mock_generator.py
src/growth_os/demo/: __init__.py  sample_generator.py  scenarios.py
src/growth_os/domain/: __init__.py  contracts.py  enums.py  exceptions.py  models.py
src/growth_os/ingestion/: __init__.py  catalog.py  freshness.py  loaders.py  mapping.py  validators.py
src/growth_os/observability/: __init__.py  audit.py  logging.py  tracing.py
src/growth_os/presentation/: __init__.py  cards.py  markdown.py  sections.py  warnings.py
src/growth_os/query/: __init__.py  builder.py  cache.py  planner.py  safety.py
src/growth_os/semantic/: __init__.py  attribution.py  benchmarks.py  forecasting.py  funnels.py  metrics.py  profile_store.py  retention.py
src/growth_os/services/: __init__.py  _helpers.py  analysis_service.py  catalog_service.py  diagnostics_service.py  forecasting_service.py  integration_service.py  (+2 more)
tests/: conftest.py  test_app_smoke.py  test_connector.py  test_demo_runtime.py  test_formatters.py  test_google_ads_connector.py  test_guardrails.py  test_ingestion.py  test_meta_ads_connector.py  test_metrics.py  test_profiles.py  test_schema.py  test_sql_safety.py  test_stripe_connector.py  test_workflow_tools.py
(+23 files in other folders)
