[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "growth-os"
version = "0.2.0"
description = "AI-powered Growth & Marketing Analytics MCP Server. Analyze funnels, compute CAC/LTV, detect anomalies, forecast KPIs, and get Shapley attribution — all through your AI assistant."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Astoriel" },
]
keywords = [
    "mcp", "mcp-server", "marketing-analytics", "growth",
    "cac", "ltv", "duckdb", "funnel", "retention", "ai",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "duckdb>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlglot>=25.0.0",
]

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9.0"]
api = ["fastapi>=0.110.0", "uvicorn>=0.29.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]
all = [
    "psycopg2-binary>=2.9.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
]

[project.scripts]
growth-os = "growth_os.server:main"
growth-os-api = "growth_os.api.server:main"

[project.urls]
Homepage = "https://github.com/Astoriel/GrowthOS"
Repository = "https://github.com/Astoriel/GrowthOS"
Issues = "https://github.com/Astoriel/GrowthOS/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/growth_os"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
